cotobang/src/main/java/com/example/cotobang/errors/InvalidAccessTokenException.java
package com.example.cotobang.errors;

public class InvalidAccessTokenException extends RuntimeException{
    public InvalidAccessTokenException(String accessToken) {
        super("Invalid access token : " + accessToken);
    }
}
